IMP-1758: Advertisement block animation work not correct on IOS

--- a/browser/src/app/components/home/advertisement-block/advertisement-block-element/advertisement-block-element.component.scss
+++ b/browser/src/app/components/home/advertisement-block/advertisement-block-element/advertisement-block-element.component.scss
@@ -156,6 +156,11 @@
           height: 100%;
           opacity: 1;
           transition: opacity 0.2s 0.2s, visibility 0.2s, height 0.4s;
+
+          @include response-to(sm) {
+            margin-top: 16px;
+          }
+
           .services-list {
             .service-name {
               pointer-events: auto;
